# dmarq

./: CONTRIBUTING.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
backend/alembic/: env.py
backend/alembic/versions/: 88b549786e2d_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/api_v1/endpoints/: auth.py  domains.py  imap.py  mail_sources.py
backend/app/core/: config.py  security.py
backend/app/middleware/: security.py
backend/app/services/: dmarc_parser.py  dns_resolver.py  gmail_client.py  imap_client.py  report_store.py
backend/app/templates/: domains.html
backend/app/templates/layouts/: base.html
backend/app/tests/: conftest.py  test_auth.py  test_config.py  test_domains_api.py  test_gmail_client.py  test_imap_endpoints.py  test_mail_sources.py  test_security.py  test_security_extra.py  test_stats_summarizer.py
backend/app/utils/: stats_summarizer.py
scripts/: generate_issues.py
